knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <description>This custom object will keep Competitor Records for Opportunities and Accounts.</description>
    <label>Competitor</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>