knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Competitors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitors (Competitor)</relationshipLabel>
    <relationshipName>Competitors1</relationshipName>
    <type>Lookup</type>
</CustomField>