knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Competitor__c/fields/Created_Year__c.field-meta.xml
<CustomField>
    <fullName>Created_Year__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <label>Created Year</label>
    <type>Text</type>
</CustomField>