knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Competitor__c/fields/Ranking_in_Account__c.field-meta.xml
<CustomField>
    <fullName>Ranking_in_Account__c</fullName>
    <label>Ranking in Account</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>