knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Competitor__c/fields/Satisfaction_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Sentiment__c</fullName>
    <label>Satisfaction/Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Favorable</fullName>
            </value>
            <value>
                <fullName>Not Favorable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>