knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Competitor__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>HM</fullName>
            </value>
            <value>
                <fullName>WW</fullName>
            </value>
            <value>
                <fullName>TM</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>